# tm

./: README.md  stack.yaml  tm.cabal
app/: Main.hs
src/: Main.hs  TuringMachine.hs
src/TuringMachine/: Class.hs  Examples.hs  Tape.hs  TwoTapes.hs
