cabal-version:      2.2
name:               tm
version:            0.1.0.0
synopsis:           Turing Machine Simulator
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
category:           Logic
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

library
  import:           warnings
  exposed-modules:  TuringMachine
                  , TuringMachine.Examples
                  , TuringMachine.Tape
                  , TuringMachine.TwoTapes
  build-depends:    base >=4.11 && <4.12
                  , containers
                  , mtl
                  , text
                  , safe
  hs-source-dirs:   src
  default-language: Haskell2010

executable tm
  import:           warnings
  main-is:          Main.hs
  build-depends:    base >=4.11 && <4.12
                  , tm
                  , ansi-terminal
                  , text
                  , safe
  hs-source-dirs:   app
  default-language: Haskell2010
